# texable

./: .gitignore  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/texable/: __init__.py  alignments.py  cell.py  column_alignments.py  custom_types.py  formatters.py  grid.py  headers.py  latex_builders.py  line_borders.py  logger_config.py  packages.py  row.py  table.py  vertical_borders.py
tests/: test_alignment.py  test_cell.py  test_custom_examples.py  test_examples.py  test_headers.py  test_overleaf_examples.py
