[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "texable"
version = "0.0.1"
authors = [
  { name="Ben Kirkels", email="texable.dev@gmail.com" }
]
description = "Easily generate LaTeX tables from Python"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
